# VST_NetProcess-

./: CMakeLists.txt  NetProcessJUCEVersion.jucer  README.md  readme.md
Builds/MacOSX/: Info-Standalone_Plugin.plist  Info-VST3.plist
Builds/MacOSX/NetProcessJUCEVersion.xcodeproj/: project.pbxproj
Builds/MacOSX/NetProcessJUCEVersion.xcodeproj/project.xcworkspace/xcuserdata/lengyue.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/NetProcessJUCEVersion.xcodeproj/xcuserdata/lengyue.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Builds/MacOSX/NetProcessJUCEVersion.xcodeproj/xcuserdata/lengyue.xcuserdatad/xcschemes/: xcschememanagement.plist
Builds/VisualStudio2022/: NetProcessJUCEVersion.sln  NetProcessJUCEVersion_SharedCode.vcxproj  NetProcessJUCEVersion_SharedCode.vcxproj.filters  NetProcessJUCEVersion_StandalonePlugin.vcxproj  NetProcessJUCEVersion_StandalonePlugin.vcxproj.filters  NetProcessJUCEVersion_VST3.vcxproj  NetProcessJUCEVersion_VST3.vcxproj.filters  resources.rc
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: AudioFile.h  AudioWork.cpp  AudioWork.h  DTW.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  params.h
doc/: netProcessConfig.json
resource/: ss_editor.uidesc
source/: AudioFile.h  params.h  ss_cids.h  ss_controller.cpp  ss_controller.h  ss_entry.cpp  ss_processor.cpp  ss_processor.h  version.h
